--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KRAIV - Digital Service Agency | You Think, We Build</title>
-    <meta name="description" content="KRAIV is a digital service agency offering affordable website design, graphic design, video editing, social media management, and lead generation for startups, influencers, and political teams." />
+    <meta name="description" content="KRAIV is a digital service agency led by Kritam Singh, offering affordable website design, graphic design, video editing, social media management, and lead generation for startups, influencers, and political teams." />
     <meta name="keywords" content="digital agency, website design, graphic design, video editing, social media, political campaigns, startups, influencers" />
   </head>
   <body>
